Bug 507193 - Cannot extract unless path is specified manually
Summary: Cannot extract unless path is specified manually
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
: 504421 506847 507226 (view as bug list)
Depends on:
Blocks: 510165
  Show dependency treegraph
 
Reported: 2025-07-18 12:46 UTC by FishBoneEK
Modified: 2025-11-25 13:31 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FishBoneEK 2025-07-18 12:46:16 UTC
SUMMARY


STEPS TO REPRODUCE
1. Open archive with Ark (in my case it's zip)
2. Click Extract button on top left
3. "Extract --- Ark" dialog shows up

OBSERVED RESULT
Extract button in "Extract --- Ark" is greyed out unless "Name" input box on the bottom of the dialog is not empty.
Seems like Ark is waiting for extraction path? But why should I specify it manually in the input box?

EXPECTED RESULT
Should be able to extract directly without any further actions, like filling the "Name" input box.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1
Kernel Version: 6.15.6-arch1-1 (64-bit)
Graphics Platform: Wayland

Additional Info:
Original KDE Discuss thread: https://discuss.kde.org/t/ark-set-a-default-extract-path-select-resulting-files-when-showing-containing-folder/36255?u=fishboneek

It seems it's a regression? One reply says Ark works fine in 23.08.5 in Kubuntu.
Comment 1 avalonvales 2025-07-18 15:48:13 UTC
Also experiencing this with Ark 25.04.2
Comment 2 Bug Janitor Service 2025-07-19 09:11:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1934
Comment 3 Bug Janitor Service 2025-07-19 09:15:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/299
Comment 4 Méven 2025-07-21 08:15:09 UTC
*** Bug 507226 has been marked as a duplicate of this bug. ***
Comment 5 Méven 2025-07-21 08:25:42 UTC
*** Bug 506847 has been marked as a duplicate of this bug. ***
Comment 6 redacted000 2025-08-13 10:26:06 UTC
I was getting this bug every time until I tried spamming the Enter key in the Extract window and got a few errors saying that whatever I had input in the Name box didn't exist on disk. I think I closed the application in frustration, but when I reopened it the bug was fixed and stayed fixed trough reboot and even reinstallation of Ark.

This happened on Fedora 42 KDE with Ark 25.04.3. I also compiled the latest master branch and could see the bug was present, but got rid of the build and back to 25.04 before the "miraculous" fix happened.
Comment 7 Méven 2025-10-09 07:20:04 UTC
*** Bug 504421 has been marked as a duplicate of this bug. ***
Comment 8 Akseli Lahtinen 2025-10-13 09:41:29 UTC
Git commit 52f9b30abd5e78621ce5f20e982b55a2c4671bfd by Akseli Lahtinen, on behalf of Méven Car.
Committed on 13/10/2025 at 09:41.
Pushed by akselmo into branch 'master'.

KFileWidgets: Allow saving to currentfolder with empty input field in special cases

To allow a selectdir saving dialog to accept an empty location
interpreting it as the current Url.

This behavior only happens when
- We are in Directory mode
- We are saving

M  +56   -0    autotests/kfilewidgettest.cpp
M  +49   -2    src/filewidgets/kfilewidget.cpp

https://invent.kde.org/frameworks/kio/-/commit/52f9b30abd5e78621ce5f20e982b55a2c4671bfd
Comment 9 FishBoneEK 2025-11-18 00:47:41 UTC
Really hopes that it can be fixed soon, now I can only use zip or 7z as alternative
Comment 10 Méven 2025-11-19 08:49:44 UTC
(In reply to FishBoneEK from comment #9)
> Really hopes that it can be fixed soon, now I can only use zip or 7z as
> alternative

It should be fixed in 6.20, feel free to confirm.
Comment 11 FishBoneEK 2025-11-20 11:27:52 UTC
(In reply to Méven from comment #10)
> 
> It should be fixed in 6.20, feel free to confirm.

Nice :)
Comment 12 Méven 2025-11-25 13:31:45 UTC
Git commit 6b23957e46c765b4c11d14eea6c68b11f72d1e43 by Méven Car.
Committed on 19/11/2025 at 08:52.
Pushed by meven into branch 'master'.

Extract Dialog: Allow to select the current Url

As destination

M  +1    -0    kerfuffle/extractiondialog.cpp

https://invent.kde.org/utilities/ark/-/commit/6b23957e46c765b4c11d14eea6c68b11f72d1e43