Extract Dialog: Allow to select the current Url

As destination

BUG: 507193